tests/compile-fail/integration__integration__timelines__negative.snap
---
source: tests/integration/timelines.rs
expression: stderr
---
error: negative timeline indices are forbidden
  ┌─ <input>:2:10
  │
2 │ timeline -1 { }
  │          ^^

error: negative timeline indices are forbidden
  ┌─ <input>:3:10
  │
3 │ timeline -2 { }
  │          ^^


